--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rpulvinla
 Title: Funzioni Per Il Progetto PULVIRUS Modello INLA
-Version: 1.1.0.0
+Version: 2.0.0.0
 Authors@R: 
     person(given = "Guido",
            family = "Fioravanti",
@@ -23,4 +23,6 @@ Imports:
     tidyr,
     sf,
     sp,
-    lubridate
+    lubridate,
+    devtools,
+    utils
